--- a/data-analyst.html
+++ b/data-analyst.html
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdu/'>
+<h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdu/'>
     Data Analyst at DocsApp
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -171,7 +171,7 @@ the entire client lifecycle and eliminates dependence on paper for financial?...
 <p><span class="badge badge-light"></span></p>
 <p>5 ?? ... Apply to (Senior)Data Analyst at SHOPLINE in Taipei City, Taiwan.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://linio.applytojob.com/apply/k1HkPuC7L5/MXICO-Financial-Senior-Data-Analyst'>M?XICO - Financial Senior Data Analyst - Linio - Career Page</a></h5> 
+<h5><a href='https://linio.applytojob.com/apply/k1HkPuC7L5/MXICO-Financial-Senior-Data-Analyst'>M?XICO - Financial Senior Data Analyst - Linio - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>17 Jul 2019 ... Apply to M?XICO - Financial Senior Data Analyst at Linio in Ciudad de M?xico, 
 Paseo de la Reforma, Mexico.</p>
@@ -189,7 +189,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vezeeta.workable.com/jobs/1076066'>Data Analyst - Apply online - Vezeeta - Jobs</a></h5> 
+<h5><a href='https://vezeeta.workable.com/jobs/1076066'>Data Analyst - Apply online - Vezeeta - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... We are looking for a passionate Data Analyst. The successful candidate will turn 
 data into information, information into insight and insight into business?...</p>
@@ -264,7 +264,7 @@ Kirkland, WA in Sunnyvale, California. Review all of the job details and apply?.
 <p>5 days ago ... The division is responsible for developing, evaluating, refining, reporting, and 
 presenting statistical data; and providing technical advice and assistance to?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/ot3Dafw3'>SEGA Europe Limited Careers - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/ot3Dafw3'>SEGA Europe Limited Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... The Data Analyst will work in the analytics team on games by SEGA Europe's 
 mobile studio, HARDlight. As part of the studio's Live Operations team, you would
@@ -386,7 +386,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -453,7 +453,7 @@ responsible?...</p>
 hire, you'll be responsible for data needs throughout the organization. You'll build
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ignitionone/jobs/1787599'>Job Application for Data Analyst at IgnitionOne</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ignitionone/jobs/1787599'>Job Application for Data Analyst at IgnitionOne</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Derive actionable insights from massive data sets with limited oversight; 
 Automate quarterly insights across native / partner channels for external facing 
