--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -152,7 +152,7 @@ Internet Solutions Corporation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC ...</a></h5> 
+<h5><a href='https://www.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Business Intelligence Analyst (12 month FTC, Maternity 
 Cover) at Paymentsense.</p>
@@ -288,7 +288,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999691641639-business-intelligence-analyst'>Adevinta Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -330,7 +330,7 @@ in Herten (published: 12.07.2019). Apply now or check the other available jobs.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/mavenlink/job/oXByafw0'>Mavenlink Careers - Business Intelligence Consultant</a></h5> 
+<h5><a href='http://jobs.jobvite.com/mavenlink/job/oXByafw0'>Mavenlink Careers - Business Intelligence Consultant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Today's leading companies are able to transform their data into insights and 
 strategic decisions that drive growth. The Business Intelligence team at 
@@ -365,7 +365,7 @@ Mavenlink?...</p>
 <p>3 days ago ... ABOUT THE TEAM: Business Science, which encompasses Digital Analytics, is 
 one of the fastest growing fields within MediaCom and focuses on (1) providing?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nlShOKwx'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nlShOKwx'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-19</p>
 <hr/>
@@ -377,7 +377,7 @@ one of the fastest growing fields within MediaCom and focuses on (1) providing?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://workable.com/j/0DC6BEDC84'>Hostinger - Jobs: Junior Business Intelligence Developer - Apply ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/0DC6BEDC84'>Hostinger - Jobs: Junior Business Intelligence Developer - Apply ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As you might already know, Business Intelligence teams analyse business data 
 and can identify the driving forces behind revenue growth. In other words, they?...</p>
@@ -401,7 +401,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/wp-engine/job/oCBv9fwB'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/wp-engine/job/oCBv9fwB'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -409,7 +409,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Rockford</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -421,7 +421,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/imperva/job/oX4oafwj'>Imperva Careers - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -429,7 +429,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -453,7 +453,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medigo/jobs/1770305'>Job Application for (Junior) Business Intelligence Analyst (m/f/x) at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medigo/jobs/1770305'>Job Application for (Junior) Business Intelligence Analyst (m/f/x) at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... We are currently looking for a (Junior) Business Intelligence Analyst (m/f/x) to join 
 our BI team. The position is available at the earliest possible date in full-time?...</p>
